src/objects/Materials_Field_Worksheet__c.object
<CustomObject>
    <description>Materials Field  Worksheet for MCAR Claims</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Total Amount</description>
        <formula>Qty_Hours__c * Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount -Auto column</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category</description>
        <inlineHelpText>Category</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Batch inspection at Supplier site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product testing &amp; acceptance at site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Payment &amp; Performance guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation from supplier site to Project site / NSN hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT or other taxes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipName>Materials_Field_Loss_Worksheet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qty_Hours__c</fullName>
        <description>Qty/Hours</description>
        <inlineHelpText>Qty/Hours</inlineHelpText>
        <label>Qty/Hours</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit Price</description>
        <inlineHelpText>Unit Price</inlineHelpText>
        <label>Unit Price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>NCC Materials Field Worksheet</label>
    <nameField>
        <displayFormat>CMFLWS-{0000}</displayFormat>
        <label>Materials Field Loss Worksheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCC Materials Field Worksheet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>